--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -14,7 +14,7 @@
             <a href="/"><img class="h-32 ml-16" src="../static/logo.webp" alt="Logo"></a>               
         </div>
         <ul class="flex justify-around font-['Montserrat'] justify-end uppercase w-1/3 mr-16"> 
-            <li class="text-black hover:text-[#F21B6A]"><a href="">Mapa</a></li>
+            <li class="text-black hover:text-[#F21B6A]"><a href="/mapa">Mapa</a></li>
             <li class="text-black hover:text-[#F21B6A]"><a href="/nosotros">Nosotros</a></li>
             <li class="text-black hover:text-[#F21B6A]"><a href="/ranking">Ranking</a></li>
             <li><a class="bg-[#01261C] hover:bg-[#F21B6A] h-10 w-40 rounded-xl text-white p-3" href="/adoptar">Adoptar</a></li>
