--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -14,7 +14,7 @@
                 <a href="/"><img class="h-32 ml-16" src="../static/logo.webp" alt="Logo"></a>               
             </div>
             <ul class="flex justify-around justify-end uppercase font-['Montserrat'] w-1/3 mr-16"> <!--|contenedor de listas no ordenados-->
-                <li class="text-black hover:text-[#F21B6A]"><a href="">Mapa</a></li>
+                <li class="text-black hover:text-[#F21B6A]"><a href="/mapa">Mapa</a></li>
                 <li class="text-[#F21B6A] hover:text-black"><a href="/nosotros">Nosotros</a></li>
                 <li class="text-black hover:text-[#F21B6A]"><a href="/ranking">Ranking</a></li>
                 <li><a class="bg-[#01261C] h-10 w-40 rounded-xl text-white p-3" href="/adoptar">Adoptar</a></li>
