--- a/templates/pago.html
+++ b/templates/pago.html
@@ -221,9 +221,9 @@
             }
             return true;
           },
-          onSubmit() {
-            alert(`You did it ${this.cardholder}.`);
-          },
+          // onSubmit() {
+          //   alert(`You did it ${this.cardholder}.`);
+          // },
           cardholder: '',
           cardNumber: '',
           expired: {
