--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,8 @@
             <div>
                 <a href="/"><img class="h-32 ml-16" src="../static/logo.webp" alt="Logo"></a>               
             </div>
-            <ul class="flex justify-around font-['Montserrat'] justify-end uppercase w-1/3 mr-16"> 
+            <ul class="flex justify-around font-['Montserrat'] justify-end uppercase w-1/3 mr-16">
+                <li class="text-black hover:text-[#F21B6A]"><a href="/blog">Blog</a></li> 
                 <li class="text-black hover:text-[#F21B6A]"><a href="/mapa">Mapa</a></li>
                 <li class="text-black hover:text-[#F21B6A]"><a href="/nosotros">Nosotros</a></li>
                 <li class="text-black hover:text-[#F21B6A]"><a href="/ranking">Ranking</a></li>
@@ -34,7 +35,7 @@
             </section>
             <section class="w-[50%]">
                 
-                <img class="h-[550px]" src="../static/mapa_arboles.webp" alt="Mapa">
+                <img class="h-[750px]" src="../static/mapatransparente.png" alt="Mapa">
 
             </section>
         </article>
