--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -10,20 +10,26 @@
 <body class="bg-[#f2f0c9]">
 
     <header class="bg-[#F2F0C9] text-black h-32 pt-6">
-        <nav class="flex justify-between items-center"> <!-- FLEX trabaja sobre dos ejes, eje vertical (arriba y abajo) y horizontal (espacio) -->
-            <div>
-                <a href="/"><img class="h-32 ml-16" src="../static/logo.webp" alt="Logo"></a>               
-            </div>
-            <div class="flex-col pr-16 items-center justify-center text-right">
-                <h1 class="text-5xl font-extrabold font-['Montserrat'] text-lime-400">RANKING DE PADRINOS</h1>
-                <h2 class="text-2xl font-['Montserrat'] ">Los destacados del mes</h2>
-            </div>
+      <nav class="flex justify-between items-center"> 
+        <div>
+            <a href="/"><img class="h-32 ml-16" src="../static/logo.webp" alt="Logo"></a>               
+        </div>
+        <ul class="flex justify-around font-['Montserrat'] justify-end uppercase w-1/3 mr-16">
+            <li class="text-black hover:text-[#F21B6A]"><a href="/blog">Blog</a></li> 
+            <li class="text-black hover:text-[#F21B6A]"><a href="/mapa">Mapa</a></li>
+            <li class="text-black hover:text-[#F21B6A]"><a href="/nosotros">Nosotros</a></li>
+            <li class="text-black hover:text-[#F21B6A]"><a href="/ranking">Ranking</a></li>
+            <li><a class="bg-[#01261C] hover:bg-[#F21B6A] h-10 w-40 rounded-xl text-white p-3" href="/adoptar">Adoptar</a></li>
+        </ul>
 
-        </nav>
     </header>
 
     <!-- <div class="flex justify-center items-center [#f2f0c9] py-26 sm:py-32"> -->
-        <div class="mx-auto grid max-w-7xl gap-x-8 gap-y-20 px-6 lg:px-8 xl:grid-cols-3 ml-72 pt-10">
+      <div class="flex flex-col pr-16 items-center justify-center text pt-10">
+        <h1 class="text-5xl font-extrabold font-['Montserrat'] text-lime-400">RANKING DE PADRINOS</h1>
+        <h2 class="text-2xl font-['Montserrat'] ">Los destacados del mes</h2>
+    </div>
+        <div class="mx-auto grid max-w-7xl gap-x-8 gap-y-20 px-6 lg:px-8 xl:grid-cols-3 ml-96 pt-10">
             
           <ul role="list" class="grid gap-x-8 gap-y-12 sm:grid-cols-2 sm:gap-y-16 xl:col-span-3 mt-20">
             <li>
